--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fetch": "^1.1.0",
+    "install": "^0.13.0",
     "node-mcstatus": "^1.1.0",
-    "node-telegram-bot-api": "^0.63.0"
+    "node-telegram-bot-api": "^0.63.0",
+    "npm": "^10.2.0",
+    "telegraf": "^4.14.0"
   }
 }
